test-cases/invalid/mixed_variable_decls_and_statements.ul
void main() {
    int i;
    i = 10;
    
    int j; // Not allowed, all variable declarations must precede all statements.
}